--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="utf-8">
   <title>css3 - 练习1</title>
   <style>
+   h4 {text-align:right}
 	.wave {
 		position: relative;
 		width: 200px;
 		height: 200px;
 		line-height: 300px;
+		margin: 0 auto;
 		text-align: center;
 		font-size: 20px;
 		color: #fff;
@@ -61,5 +63,6 @@
 		<div class="inside"></div>
 	</div>
 </div>
+<h4>---- 每天一个css 之 波浪背景----</h4>
 </body>
 </html>
