--- a/index.html
+++ b/index.html
@@ -2,59 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>css3 - 练习1</title>
-  <style>
-   h4 {text-align:right}
-	.wave {
-		position: relative;
-		width: 200px;
-		height: 200px;
-		line-height: 300px;
-		margin: 0 auto;
-		text-align: center;
-		font-size: 20px;
-		color: #fff;
-		background-color: rgb(118, 218, 255);
-		border-radius: 50%;
-	}
-	.inside{
-		position: absolute;
-		top: 10px;
-		left: 10px;
-		width: 160px;
-		height: 160px;
-		border:  10px solid #fff;
-		border-radius: 50%;
-	}
-	.wave:before, .wave:after{
-        content: "";
-        position: absolute;
-        width: 400px;
-        height: 400px;
-        top: 0;
-        left: 50%;
-        background-color: rgba(255, 255, 255, .4);
-        border-radius: 45%;
-        transform: translate(-50%, -70%) rotate(0);
-        animation: rotate 6s linear infinite;
-        z-index: 10;
-    }
-    .wave:after {
-        border-radius: 47%;
-        background-color: rgba(255, 255, 255, .9);
-        transform: translate(-50%, -70%) rotate(0);
-        animation: rotate 10s linear -5s infinite;
-        z-index: 20;
-    }
- 
-@keyframes rotate {
-    50% {
-        transform: translate(-50%, -73%) rotate(180deg);
-    } 100% {
-        transform: translate(-50%, -70%) rotate(360deg);
-    }
-}
-  </style>
+  <title>css3 - 练习</title>
+  <link rel="stylesheet" href="css/css1.css">
+  <link rel="stylesheet" href="css/css2.css">
 </head>
 <body>
   <div class="container">
@@ -64,5 +14,27 @@
 	</div>
 </div>
 <h4>---- 每天一个css 之 波浪背景----</h4>
+<hr>
+<div id="watch">
+			<i class="light"></i>
+			<div id="hour"></div>
+			<div id="min"></div>
+			<div id="sec"></div>
+			<div id="center"></div>
+			<div id="one">Ⅰ</div>
+			<div id="two">Ⅱ</div>
+			<div id="three">Ⅲ</div>
+			<div id="four">Ⅳ</div>
+			<div id="five">Ⅴ</div>
+			<div id="six">Ⅵ</div>
+			<div id="seven">Ⅶ</div>
+			<div id="eight">Ⅷ</div>
+			<div id="nine">Ⅸ</div>
+			<div id="ten">Ⅹ</div>
+			<div id="eleven">Ⅺ</div>
+			<div id="twelve">Ⅻ</div>
+	</div>  
+	<h4>---- 每天一个css 之 买了个表 ----</h4>
+	<hr>
 </body>
 </html>
