--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>css3 - 练习</title>
   <link rel="stylesheet" href="css/css1.css">
   <link rel="stylesheet" href="css/css2.css">
+  <link rel="stylesheet" href="css/css3.css">
 </head>
 <body>
   <div class="container">
@@ -35,6 +36,16 @@
 			<div id="twelve">Ⅻ</div>
 	</div>  
 	<h4>---- 每天一个css 之 买了个表 ----</h4>
+	<hr>
+	<ul class="nav">
+		<li><a href="">许嵩</a></li>
+		<li><a href="">凉介</a></li>
+		<li><a href="">侑李</a></li>
+		<li><a href="">夏目</a></li>
+		<li><a href="">Sherlock</a></li>
+		<li><a href="">Jhon</a></li>
+		</ul>
+		<h4>---- 每天一个css 之 立体导航 ----</h4>
 	<hr>
 </body>
 </html>
