--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/css1.css">
   <link rel="stylesheet" href="css/css2.css">
   <link rel="stylesheet" href="css/css3.css">
+  <link rel="stylesheet" href="css/css4.css">
 </head>
 <body>
   <div class="container">
@@ -46,6 +47,15 @@
 		<li><a href="">Jhon</a></li>
 		</ul>
 		<h4>---- 每天一个css 之 立体导航 ----</h4>
+	<hr>
+	<ul class="bar-out">
+		<li class="bar bar1"></li>
+		<li class="bar bar2"></li>
+		<li class="bar bar3"></li>
+		<li class="bar bar4"></li>
+		<li class="bar bar5"></li>
+	</ul>
+	<h4>---- 每天一个css 之 加载特效</h4>
 	<hr>
 </body>
 </html>
