--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/css2.css">
   <link rel="stylesheet" href="css/css3.css">
   <link rel="stylesheet" href="css/css4.css">
+  <link rel="stylesheet" href="css/css5.css">
 </head>
 <body>
   <div class="container">
@@ -57,5 +58,9 @@
 	</ul>
 	<h4>---- 每天一个css 之 加载特效</h4>
 	<hr>
+	<div class="demo2-bar">
+				<div class="demo2-circle"></div>
+	</div>
+	<h4>---- 每天一个css 之 加载特效2</h4>
 </body>
 </html>
