--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/css3.css">
   <link rel="stylesheet" href="css/css4.css">
   <link rel="stylesheet" href="css/css5.css">
+  <link rel="stylesheet" href="css/css6.css">
 </head>
 <body>
   <div class="container">
@@ -58,9 +59,23 @@
 	</ul>
 	<h4>---- 每天一个css 之 加载特效</h4>
 	<hr>
-	<div class="demo2-bar">
-				<div class="demo2-circle"></div>
+	<div class="bar-out">
+		<div class="demo2-bar">
+					<div class="demo2-circle"></div>
+		</div>
 	</div>
 	<h4>---- 每天一个css 之 加载特效2</h4>
+	<hr>
+	<div class="bar-out">
+		<ul>
+			<li class="demo3-circle demo3-circle1"></li>
+			<li class="demo3-circle demo3-circle2"></li>
+			<li class="demo3-circle demo3-circle3"></li>
+			<li class="demo3-circle demo3-circle4"></li>
+			<li class="demo3-circle demo3-circle5"></li>
+		</ul>
+	</div>	
+	<h4>---- 每天一个css 之 加载特效3</h4>
+	<hr>
 </body>
 </html>
