--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <link rel="stylesheet" href="css/css4.css">
   <link rel="stylesheet" href="css/css5.css">
   <link rel="stylesheet" href="css/css6.css">
+  <link rel="stylesheet" href="css/css7.css">
 </head>
 <body>
+<a href="changebc.html">3月6号，切换背景图练习</a>
   <div class="container">
     <div class="wave">
 		飘啊飘啊
@@ -19,6 +21,7 @@
 </div>
 <h4>---- 每天一个css 之 波浪背景----</h4>
 <hr>
+
 <div id="watch">
 			<i class="light"></i>
 			<div id="hour"></div>
@@ -40,6 +43,7 @@
 	</div>  
 	<h4>---- 每天一个css 之 买了个表 ----</h4>
 	<hr>
+
 	<ul class="nav">
 		<li><a href="">许嵩</a></li>
 		<li><a href="">凉介</a></li>
@@ -50,6 +54,7 @@
 		</ul>
 		<h4>---- 每天一个css 之 立体导航 ----</h4>
 	<hr>
+
 	<ul class="bar-out">
 		<li class="bar bar1"></li>
 		<li class="bar bar2"></li>
@@ -59,6 +64,7 @@
 	</ul>
 	<h4>---- 每天一个css 之 加载特效</h4>
 	<hr>
+
 	<div class="bar-out">
 		<div class="demo2-bar">
 					<div class="demo2-circle"></div>
@@ -66,6 +72,7 @@
 	</div>
 	<h4>---- 每天一个css 之 加载特效2</h4>
 	<hr>
+
 	<div class="bar-out">
 		<ul>
 			<li class="demo3-circle demo3-circle1"></li>
@@ -77,5 +84,14 @@
 	</div>	
 	<h4>---- 每天一个css 之 加载特效3</h4>
 	<hr>
+
+	<ul class="nav1">
+		<li><a href="">许嵩</a></li>
+		<li><a href="">凉介</a></li>
+		<li><a href="">侑李</a></li>
+		<li><a href="">夏目</a></li>
+		<li><a href="">猫咪</a></li>
+	</ul>
+	<h4>---- 每天一个css 之 切换背景</h4>
 </body>
 </html>
