03/07 导航栏特效

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <link rel="stylesheet" href="css/css7.css">
 </head>
 <body>
-<a href="changebc.html">3月6号，切换背景图练习</a>
-  <div class="container">
-    <div class="wave">
+<a href="changebc.html">3月6号，切换背景图练习</a><br>
+<a href="3Dhtml.html">3月7号，3D导航栏</a>
+<div class="container">
+      <div class="wave">
 		飘啊飘啊
 		<div class="inside"></div>
 	</div>
