--- a/3Dhtml.html
+++ b/3Dhtml.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>3D导航栏</title>
     <link rel="stylesheet" href="css/3dnav.css">
+    <link rel="stylesheet" href="css/reset.css">
 </head>
 <body>
     <div id="nav">
