--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/css5.css">
   <link rel="stylesheet" href="css/css6.css">
   <link rel="stylesheet" href="css/css7.css">
+  <link rel="stylesheet" href="css/css8.css">	
 </head>
 <body>
 <a href="changebc.html">3月6号，切换背景图练习</a><br>
@@ -85,5 +86,16 @@
 	</div>	
 	<h4>---- 每天一个css 之 加载特效3</h4>
 	<hr>
+
+	<div class="bar-out">
+		<ul>
+			<li class="demo4-squart demo4-squart1"></li>
+			<li class="demo4-squart demo4-squart2"></li>
+			<li class="demo4-squart demo4-squart3"></li>
+			<li class="demo4-squart demo4-squart4"></li>
+			<li class="demo4-squart demo4-squart5"></li>
+		</ul>
+	</div>
+	<h4>---- 每天一个css 之 加载特效4</h4>
 </body>
 </html>
