--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 <a href="changebc.html">3月6号，切换背景图练习</a><br>
-<a href="3Dhtml.html">3月7号，3D导航栏</a>
+<a href="3Dhtml.html">3月7号，3D导航栏</a><br>
 <a href="taihe/index.html">3月9号，曾经的响应式练手项目</a>
 <div class="container">
       <div class="wave">
