--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <a href="changebc.html">3月6号，切换背景图练习</a><br>
 <a href="3Dhtml.html">3月7号，3D导航栏</a><br>
 <a href="https://fuqunying.github.io/TaiHe/">3月9号，曾经的响应式练手项目</a><br>
-<a href="https://fuqunying.github.io/ShenWu/">顺便看一下模仿的《神武2》网游官网吧</a>
+<a href="https://fuqunying.github.io/ShenWu/">模仿的《神武2》网游官网吧</a><br>
+<a href="svg.html">3月12号 svg绘图</a><a href="canvas.html">canvas绘图</a>
 <div class="container">
       <div class="wave">
 		飘啊飘啊
