--- a/3dpic.html
+++ b/3dpic.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>3D旋转视图</title>
+    <link rel="stylesheet" href="css/3dpic.css">
 </head>
 <body>
 <div id="container">
