--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <a href="https://fuqunying.github.io/TaiHe/">3月9号，曾经的响应式练手项目</a><br>
 <a href="https://fuqunying.github.io/ShenWu/">模仿的《神武2》网游官网吧</a><br>
 <a href="svg.html">3月12号 svg绘图</a><a href="canvas.html">canvas绘图</a>
+<a href="3dpic.html">3D旋转</a>
 <div class="container">
       <div class="wave">
 		飘啊飘啊
