--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
     <link rel="stylesheet" href="css/css7.css">
     <link rel="stylesheet" href="css/css8.css">
     <link rel="stylesheet" href="css/css9.css">
+    <link rel="stylesheet" href="css/css10.css">
 </head>
 <body>
 <a href="changebc.html">3月6号，切换背景图练习</a><br>
 <a href="3Dhtml.html">3月7号，3D导航栏</a><br>
 <a href="https://fuqunying.github.io/TaiHe/">3月9号，曾经的响应式练手项目</a><br>
-<a href="https://fuqunying.github.io/ShenWu/">模仿的《神武2》网游官网吧</a><br>
+<a href="https://fuqunying.github.io/ShenWu/">模仿的《神武2》网游官网</a><br>
 <a href="svg.html">3月12号 svg绘图</a><a href="canvas.html">canvas绘图</a>
 <a href="3dpic.html">3D旋转</a>
 <div class="container">
@@ -112,6 +113,19 @@
         <li class="demo5-squart demo5-squart5"></li>
     </ul>
 </div>
+<h4>---- 每天一个css 之 加载特效5</h4>
+<hr>
 
+<div class="bar-out">
+    <ul>
+        <li class="demo6-squart demo6-squart1"></li>
+        <li class="demo6-squart demo6-squart2"></li>
+        <li class="demo6-squart demo6-squart3"></li>
+        <li class="demo6-squart demo6-squart4"></li>
+        <li class="demo6-squart demo6-squart5"></li>
+    </ul>
+</div>
+<h4>---- 每天一个css 之 加载特效6</h4>
+<hr>
 </body>
 </html>
